# secretspec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  composer.json  devenv.nix  devenv.yaml  dist-workspace.toml  dprint.json  mdt.toml  monochange.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  secretspec.toml
.changeset/: 1780486946-monosecret.md  secret-access-reasons-monosecret.md  typescript-client-monosecret.md  typescript-sdk-monosecret.md
.claude/: settings.local.json
.claude/commands/: release.md
.dart_tool/: package_config.json  package_graph.json
.github/: zizmor.yml
.github/workflows/: changeset-policy.yml  ci.yml  claude-code-review.yml  cli-artifacts.yml  dotnet-package.yml  ffi-build.yml  go-embed.yml  go-static.yml  haskell-build.yml  node-addon.yml  npm-bootstrap.yml  php-ext.yml  pre-release.yml  publish.yml  python-wheels.yml  release-pr.yml  release.yml  ruby-gems.yml  sdks.yml  test.yml  v-release.yml
.templates/: readme.t.md
conformance/: README.md  run.sh
docs/: astro.config.mjs  astro.config.ts  package-lock.json  package.json  worker.js  wrangler.jsonc
docs/public/: install
egui-pinentry/: Cargo.toml  README.md
egui-pinentry/examples/: demo.rs
egui-pinentry/src/: error.rs  grab.rs  lib.rs  render.rs
examples/derive/: Cargo.toml  derive.rs
monosecret/: Cargo.toml
monosecret/src/: config.rs  error.rs  generator.rs  lib.rs  secrets.rs  tests.rs  validation.rs
monosecret/tests/: check_detail_provider_refs.rs  filtered_run_tests.rs  (+1 more)
monosecret_derive/: Cargo.toml
schema/: resolution-report.schema.json  resolve-response.schema.json
scripts/: check-linux-portability.sh  ci-sdks.sh  copy-mingw-import-libs.sh  sync-sdk-versions.sh  upload-release-asset.sh
secretspec/: Cargo.toml  README.md
secretspec-action/: README.md  action.yml
secretspec-derive/: Cargo.toml
secretspec-dotnet/: README.md
secretspec-ffi/: Cargo.toml
secretspec-ffi/include/: secretspec.h
secretspec-ffi/src/: lib.rs
secretspec-ffi/tests/: c_abi.rs  smoke.c
secretspec-go/: .gitattributes  .gitignore  README.md  binding_cgo.go  binding_purego.go  codegen_test.go  conformance_test.go  dlopen_unix.go  dlopen_windows.go  embedded.go  embedded_darwin_amd64.go  embedded_darwin_arm64.go  embedded_default.go  embedded_linux_amd64.go  embedded_linux_arm64.go  embedded_nonunix.go  embedded_unix.go  embedded_unix_test.go  embedded_unsupported.go  embedded_windows_amd64.go  go.mod  secretspec.go  secretspec_test.go
secretspec-hs/: .gitignore  README.md  secretspec.cabal
secretspec-hs/src/: SecretSpec.hs
secretspec-hs/test/: Main.hs
secretspec-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
secretspec-node/npm/darwin-arm64/: README.md  package.json
secretspec-node/npm/linux-arm64-gnu/: README.md  package.json
secretspec-node/npm/linux-x64-gnu/: README.md  package.json
secretspec-node/npm/win32-x64-msvc/: README.md  package.json
secretspec-node/scripts/: build-addon.sh
secretspec-node/src/: lib.rs
secretspec-node/test/: codegen.test.js  conformance.test.js  resolve.test.js
secretspec-php/: .gitignore  Cargo.toml  README.md  build.rs  phpunit.xml.dist
secretspec-php/native/: lib.rs
secretspec-php/scripts/: build-ext.sh  install-ffi-lib.php
secretspec-php/src/: Builder.php  MissingRequiredException.php  Native.php  Report.php  Resolved.php  ResolvedSecret.php  SecretReport.php  SecretSpec.php  SecretSpecException.php
secretspec-php/tests/: ConformanceTest.php  ResolveTest.php
secretspec-py/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
secretspec-py/scripts/: stage-cdylib.sh
secretspec-py/secretspec/: __init__.py  _build_ffi.py
secretspec-py/src/: lib.rs
secretspec-py/tests/: conftest.py  test_codegen.py  test_conformance.py  test_resolve.py
secretspec-rb/: .gitignore  README.md  secretspec.gemspec
secretspec/src/: audit.rs  codegen.rs  composition.rs  config.rs  error.rs  generator.rs  lib.rs  manifest.rs  plan.rs  prompt.rs  report.rs  resolve.rs  secrets.rs  tests.rs  validation.rs
secretspec/src/cli/: mod.rs
secretspec/src/fixtures/: issue_36_secretspec.toml
secretspec/src/provider/: age.rs  akv.rs  awssm.rs  bitwarden.rs  bw.rs  bws.rs  dotenv.rs  env.rs  gcsm.rs  gopass.rs  infisical.rs  kdbx.rs  keyring.rs  lastpass.rs  macros.rs  mod.rs  onepassword.rs  openbao.rs  pass.rs  passbolt.rs  protonpass.rs  scaleway.rs  systemd_credential.rs  tests.rs  vault.rs  vault_common.rs
secretspec/src/provider/sops/: config.rs  fields.rs  format.rs  mod.rs  notes.md  pattern.rs  tests.rs
secretspec/src/provider/sops/go_interop/: Cargo.toml  build.rs
secretspec/src/provider/sops/go_interop/go/: bindings.rs  go.mod  go.sum  libsops_wrapper.h  sops_wrapper.go
secretspec/src/provider/sops/go_interop/src/: lib.rs  main.rs
secretspec/src/provider/sops/test_fixtures/: key.txt  test_secrets.enc.json  test_secrets.json
secretspec/src/provider/sops/test_fixtures/directory/some-project-name/: .env.development  .env.development.enc  .env.production  .env.production.enc  development.enc.json  development.json  production.enc.json
secretspec/src/provider/sops/test_fixtures/directory/some-project-name/development/: secrets.enc.json
secretspec/src/provider/sops/test_fixtures/directory/some-project-name/production/: secrets.enc.json
secretspec/src/provider/sops/test_fixtures/single_file/: some-project-name.enc.ini  some-project-name.enc.json  some-project-name.enc.yaml  some-project-name.ini  some-project-name.json  some-project-name.yaml
secretspec/src/provider/sops/test_fixtures/test_secrets/: some-project-name.enc.json  some-project-name.json
secretspec/tests/: check_detail_provider_refs.rs  typed_scope_env.rs
secretspec/tests/fixtures/: resolution_report.golden.json
tests/: bitwarden_integration.sh  bitwarden_performance.sh  bitwarden_regression_findings.sh  cli-integration.sh  test_performance_logging.sh  test_provider_not_found.rs  vaultwarden_bootstrap.py  vaultwarden_harness.sh
(+135 files in other folders)
