[workspace]
members = [
  "secretspec",
  "secretspec-derive",
  "secretspec-ffi",
  "secretspec-node",
  "secretspec-php",
  "secretspec-py",
  "examples/derive",
]
resolver = "2"

[workspace.package]
version = "0.16.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
keyring = { version = "3.6.2", features = [
  "sync-secret-service",
  "windows-native",
  "apple-native",
] }
keepass = { version = "0.13.17", features = ["save_kdbx4"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
thiserror = "2.0"
etcetera = "0.11"
colored = "3.0"
dotenvy = "0.15"
inquire = { version = "0.9.4", features = ["experimental-multiline-input"] }
miette = { version = "7.6", features = ["fancy"] }
serde_json = "1.0"
tempfile = "3.0"
http = "1.0"
url = "2.5.4"
percent-encoding = "2.3"
whoami = "2.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
insta = "1.34"
linkme = "0.3"
jiff = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
bitwarden = { version = "2.0.0", features = ["secrets"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
google-cloud-secretmanager-v1 = "1.2"
aws-config = "1"
aws-sdk-secretsmanager = "1"
azure_core = "1.0.0"
azure_identity = "1.0.0"
azure_security_keyvault_secrets = "1.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
secretspec-derive = { version = "0.16.0", path = "./secretspec-derive" }
secretspec = { version = "0.16.0", path = "./secretspec" }
rand = "0.9"
rsa = { version = "0.9", features = ["pem"] }
uuid = { version = "1", features = ["v4"] }
data-encoding = "2"
detect-coding-agent = "0.1"
age = { version = "0.12", features = ["armor", "plugin", "ssh"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
