cabal-version:      2.4
name:               secretspec
version:            0.12.0
synopsis:           Haskell SDK for SecretSpec, a declarative secrets manager
description:
  A thin client over the @secretspec-ffi@ C ABI (linked at build time).
  Resolution (providers, chains, profiles, generation, @as_path@) happens in the
  Rust core; this package marshals a JSON request to the native library and
  parses the response, mirroring the Rust derive crate's vocabulary.
homepage:           https://secretspec.dev/
license:            Apache-2.0
license-file:       LICENSE
author:             Domen Kožar
maintainer:         domen@enlambda.com
category:           Configuration
build-type:         Simple

library
  exposed-modules:    SecretSpec
  hs-source-dirs:     src
  build-depends:      base       >=4.14 && <5
                    , aeson      >=2.0  && <3
                    , bytestring <1
                    , containers <1
                    , directory  <2
                    , text       <3
  -- The native resolver, linked at build time. Pass its location with
  -- `cabal build --extra-lib-dirs=<cargo target>/debug` (and put the same
  -- directory on the runtime loader path, e.g. LD_LIBRARY_PATH).
  extra-libraries:    secretspec_ffi
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite secretspec-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base
                    , secretspec
                    , aeson      >=2.0
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , process
                    , text
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
