[package]
name = "secretspec-node-native"
version.workspace = true
edition.workspace = true
repository = "https://github.com/cachix/secretspec"
description = "napi-rs Node addon for SecretSpec"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16"
# No default features (no `cli`, hence no `gui-prompt`/egui GUI stack in the
# Node addon); re-enable the providers the SDK resolves from.
secretspec = { path = "../secretspec", version = "0.13.0", default-features = false, features = [
  "keyring",
  "gcsm",
  "awssm",
  "vault",
  "bws",
] }

[build-dependencies]
napi-build = "2.1"
