[package]
name = "secretspec-py-native"
version.workspace = true
edition.workspace = true
repository = "https://github.com/cachix/secretspec"
description = "pyo3 extension for the Python SDK"
license = "Apache-2.0"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
# No default features (no `cli`, hence no `gui-prompt`/egui GUI stack in the
# extension module); re-enable the providers the SDK resolves from.
secretspec = { path = "../secretspec", version = "0.13.0", default-features = false, features = [
  "keyring",
  "gcsm",
  "awssm",
  "vault",
  "bws",
] }
