[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secretspec"
version = "0.12.0"
description = "Declarative secrets, every environment, any provider (Python SDK)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = ["cffi>=1.15"]

[project.urls]
Homepage = "https://secretspec.dev/"
Repository = "https://github.com/cachix/secretspec"

[tool.setuptools]
packages = ["secretspec"]

[tool.setuptools.package-data]
# The cdylib is bundled here by the packaging step; absent in a source checkout,
# where the SDK falls back to SECRETSPEC_FFI_LIB or a Cargo target directory.
secretspec = ["_lib/*"]
