[build-system]
# maturin compiles the pyo3 extension (secretspec-py-native, see Cargo.toml)
# and statically links it in as secretspec._native; a Rust toolchain must be
# on PATH.
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "secretspec"
version = "0.12.1"
description = "Declarative secrets, every environment, any provider (Python SDK)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://secretspec.dev/"
Repository = "https://github.com/cachix/secretspec"

[tool.maturin]
module-name = "secretspec._native"
