[package]
name = "secretspec"
version.workspace = true
edition.workspace = true
repository = "https://github.com/cachix/secretspec"
description = "Declarative secrets, every environment, any provider"
license = "Apache-2.0"

[lib]
name = "secretspec"
path = "src/lib.rs"

[[bin]]
name = "secretspec"
path = "src/bin/secretspec.rs"
required-features = ["cli"]

[dependencies]
clap.workspace = true
keyring = { workspace = true, optional = true }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
etcetera.workspace = true
colored.workspace = true
dotenvy.workspace = true
serde-envfile.workspace = true
inquire.workspace = true
miette.workspace = true
serde_json.workspace = true
tempfile.workspace = true
url.workspace = true
whoami = { workspace = true, optional = true }
linkme.workspace = true
secrecy.workspace = true
bitwarden = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
google-cloud-secretmanager-v1 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
tokio.workspace = true
reqwest = { workspace = true, optional = true }
rand.workspace = true
rsa.workspace = true
uuid.workspace = true
data-encoding.workspace = true

[features]
default = ["cli", "keyring", "gcsm", "awssm", "vault", "bws"]
cli = []
keyring = ["dep:keyring", "dep:whoami"]
gcsm = ["dep:google-cloud-secretmanager-v1"]
awssm = ["dep:aws-config", "dep:aws-sdk-secretsmanager"]
vault = ["dep:reqwest"]
bws = ["dep:bitwarden", "dep:rustls"]
